--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "pinia": "^2.3.0",
+    "sqlite3": "^5.1.7",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.7.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
