--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "sass": "^1.83.4",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
