--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "save": "^2.9.0",
     "sqlite3": "^5.1.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
