--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 VITE_SERVER_PORT=3000
-VITE_DOMAIN_URL=http://localhost:3000/
+VITE_DOMAIN_PATH=http://localhost:3000/
 VITE_OPEN_CAGE_API_KEY=d15f8bd8ab0a407f9c3eaba5b92c89e8
+VITE_DOMAIN_URL=http://localhost:
