--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "leaflet": "^1.9.4",
+    "opencage-api-client": "^1.0.7",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "save": "^2.9.0",
     "sqlite3": "^5.1.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-google-map": "^0.21.1",
     "vuetify": "^3.7.6"
   },
   "devDependencies": {
